# bubbles-rs

./: Cargo.toml  LICENSE  README.md
src/: app.rs  components.rs  lib.rs
src/colors/: converters.rs  gradient.rs  mod.rs
src/components/: input.rs  mod.rs  progress.rs
src/core/: component.rs  dimension.rs  events.rs  lifecycle.rs  mod.rs  mutators.rs  render.rs  renderer.rs  state.rs  style.rs  view.rs
