[package]
name = "bubbles-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ahmad2smile/bubbles-rs"
homepage = "https://github.com/ahmad2smile/bubbles-rs"
keywords = ["bubbles", "tui"]
description = "A TUI Framework inspired by Go Bubbles"
exclude = [
    "bin/**/*",
]

[lib]
name = "bubbles"
path = "src/lib.rs"

[[bin]]
name = "bubbles"
path = "src/bin/bin.rs" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
fast-srgb8 = "1.0.0"
palette = "0.6.1"
